2007-05-08  Will Cohen  <wcohen@redhat.com>
	PR4470
	* testsuite/systemtap.syscall/syscall.exp: Build correct sizes for
	32-bit and 64-bit machines.

2007-05-07  Martin Hunt  <hunt@redhat.com>
	PR4466   
	* systemtap.samples/system_func.stp: Rewrite test to account 
	for probes not being placed until after begin.
	* systemtap.samples/system_func.exp: Only expect 1 sys_open.

2007-05-06  Frank Ch. Eigler  <fche@elastic.org>

	* semko/thirtynine.stp: New test.

2007-05-01  Martin Hunt  <hunt@redhat.com>

	* systemtap.samples/system_func.*: New test.

2007-05-01  Martin Hunt  <hunt@redhat.com>
	
	* systemtap.samples/sysopen*: Deleted.

2007-04-29  Frank Ch. Eigler  <fche@elastic.org>

	* Makefile.am (EXTRA_DIST): Add dejagnu subdirectories.
	* configure.ac: Bump version to match parent directory.
	* Makefile.in, configure: Regenerated.

2007-04-25 David Wilder <dwilder@ibm.com>

	* systemtap.samples/profile.exp Increased timeout from 30 to 60 sec
	to fix intermittent failures on s390x.

2007-0-2  Mike Mason <mmlnx@us.ibm.com>

	* buildok/socket.stp: Adapted to changes in 2.6.19 socket routines.

2007-04-24  Will Cohen  <wcohen@redhat.com>

	* buildok/memory.stp: Test vm.pagefault.return.

2007-04-23  Frank Ch. Eigler  <fche@elastic.org>

	* systemtap.pass1-4/buildok.exp: Add some kfails.

2007-04-10  Martin Hunt  <hunt@redhat.com>

	* systemtap.printf/out*: New output tests to stress output 
	buffering and transport.
	* systemtap.printf/mixed*: More output tests mixing print, 
	printf, and print_char.
	* systemtap.printf/end*: Test that output from end probes 
	is all sent.
	
2007-04-05  Martin Hunt  <hunt@redhat.com>

	* systemtap.samples/arith_limits.exp: Set test name correctly.

2007-04-04  Pierre Peiffer  <pierre.peiffer@bull.net>

	* parseok/fourteen.stp: Add test about $# and @# usage during
	the preprocessing.
	* parseko/preprocess10.stp: New test.
	* parseko/preprocess11.stp: New test.
	* parseko/preprocess12.stp: New test.
